# dgx-pixels

./: .gitignore  CLAUDE.md  CLEANUP-STATUS.md  CONTRIBUTING.md  DOCKER-QUICKREF.md  GATE-03-VALIDATION.md  OBSERVABILITY-QUICKREF.md  PARALLEL_WORK_SUMMARY.md  PREVIEW_DISPLAY_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  RFD_gpt5_dgx_pixels.md  ROADMAP.md  TEST_RESULTS_PREVIEW_MANAGER.md  WS-10-COMPLETION.md  WS-12-SUMMARY.md  WS-17-VALIDATION-CHECKLIST.md  WS07_COMPLETION.md  WS09_COMPLETION.md  WS15_COMPLETION_SUMMARY.md  justfile  requirements.txt  tee  tui-output.txt
examples/bevy_integration/: .gitignore  .mcp_config  Cargo.toml  QUICKSTART.md  README.md  create_placeholders.py
examples/bevy_integration/assets/: README.md
examples/bevy_integration/prompts/: sprite_prompts.yaml
examples/bevy_integration/src/: main.rs  manifest_loader.rs  mcp_client.rs  sprite_manager.rs
python/: pyproject.toml  requirements-worker.txt  requirements.txt  worker_config.yaml
python/batch/: __init__.py  batch_processor.py  comfyui_client.py  output_manager.py
python/deployment/: __init__.py  manifest_generator.py  post_processor.py  validator.py
python/mcp_server/: INTEGRATION.md  QUICKSTART.md  README.md  __init__.py  __main__.py  backend_client.py  config_loader.py  requirements.txt  server.py  test_client.py  tools.py  tools_enhanced.py
python/metrics/: __init__.py  exporter.py
python/optimization/: QUICKSTART.md  benchmark_optimized.py  memory_profiler.py  requirements.txt  sdxl_optimizations.py
python/training/: __init__.py  captioning.py  dataset_prep.py  lora_trainer.py  requirements.txt
python/training/validation/: __init__.py  validate_lora.py
python/workers/: comfyui_client.py  generation_worker.py  job_executor.py  job_queue.py  message_protocol.py  progress_tracker.py  test_model_scanning.py  zmq_server.py
rust/: Cargo.toml  README.md
rust/docs/: T10_IMPLEMENTATION_REPORT.md  WS16_COMPARISON_PROGRESS_IMPLEMENTATION.md
rust/examples/: create_test_image.rs
rust/src/: app.rs  comparison.rs  lib.rs  main.rs  messages.rs  reports.rs  zmq_client.rs
rust/src/bevy_app/: config.rs  mod.rs  plugins.rs
rust/src/events/: handler.rs  mod.rs
rust/src/sixel/: image_renderer.rs  mod.rs  preview_manager.rs  terminal_detection.rs
rust/src/ui/: layout.rs  mod.rs  theme.rs
rust/tests/: assets_integration_test.rs  bevy_runtime.rs  gallery_state_test.rs  integration_test.rs  job_submission_integration.rs  preview_manager_test.rs  preview_system_test.rs  snapshot_gallery_test.rs  snapshot_screens_test.rs  state_migration.rs  ws06b_preview_integration.rs
rust/tests/helpers/: fixtures.rs  mock_zmq.rs  mod.rs  terminal.rs
rust/tests/snapshots/: snapshot_gallery_test__gallery_empty.snap  snapshot_gallery_test__gallery_first_selected.snap  snapshot_gallery_test__gallery_large_terminal.snap  snapshot_gallery_test__gallery_last_selected.snap  snapshot_gallery_test__gallery_many_images.snap  snapshot_gallery_test__gallery_many_images_middle_selected.snap  snapshot_gallery_test__gallery_middle_selected.snap  snapshot_gallery_test__gallery_single_image.snap  snapshot_gallery_test__gallery_small_terminal.snap  snapshot_gallery_test__gallery_text_only_capability.snap  snapshot_gallery_test__gallery_with_images.snap  snapshot_screens_test__empty_state_gallery.snap  snapshot_screens_test__empty_state_generation.snap  snapshot_screens_test__empty_state_queue.snap  snapshot_screens_test__generation_completed_job.snap  snapshot_screens_test__generation_debug_logs.snap  snapshot_screens_test__generation_failed_job.snap  snapshot_screens_test__generation_initial.snap  snapshot_screens_test__generation_queued_job.snap  snapshot_screens_test__generation_running_job.snap  snapshot_screens_test__generation_small_terminal.snap  (+13 more)
(+307 files in other folders)
