[project]
name = "dgx-pixels-backend"
version = "0.1.0"
description = "Python AI backend worker for DGX-Pixels"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=25.1.0",
    "msgpack>=1.0.5",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
