[package]
name = "dgx-pixels-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "dgx-pixels-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
zmq = "0.10.0"
serde_json = "1.0.145"
rmp-serde = "1.3.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Bevy ECS runtime (for migration to bevy_ratatui)
# Note: Using Bevy 0.15 for compatibility with bevy_ratatui 0.7
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "multi_threaded",
], optional = true }
bevy_ratatui = { version = "0.7", optional = true }

# Image processing and Sixel rendering
image = "0.24"
viuer = "0.7"
tempfile = "3.8"

# Performance
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[features]
default = []
bevy_migration_foundation = ["dep:bevy", "dep:bevy_ratatui"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
