[package]
name = "bevy-dgx-pixels-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "png",
    "x11",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
